fix UI on mobile

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 .centered-div {
-    height: 90vh;
+    height: 88vh;
     justify-content: center;
     display: flex;
     flex-direction: column;
